Fix layout issues including required avatar height

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -2582,7 +2583,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 ul:not(.browser-default) {
@@ -4257,7 +4258,7 @@ a {
 
 html {
   line-height: 1.5;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: normal;
   color: rgba(0, 0, 0, 0.87);
 }
@@ -4883,7 +4884,7 @@ small {
   cursor: pointer;
 }
 .btn:hover, .btn-small:hover, .btn-large:hover {
-  background-color: #7c0303;
+  background-color: #ffab40;
 }
 
 .btn-floating {
@@ -8095,13 +8096,17 @@ body {
   background-color: white;
 }
 
+nav .brand-logo {
+  font-size: 1rem;
+}
+
 nav h1 {
   position: relative;
   font-size: 1.4em;
   top: 1em;
 }
 
-#header {
+header#header {
   color: #fff;
   background: grey url("https://images2.imgbox.com/c6/93/WBMZz479_o.jpg") no-repeat fixed center center/cover;
   min-height: 40vh;
@@ -8109,22 +8114,40 @@ nav h1 {
   padding: 2em;
   margin-bottom: 4em;
 }
-#header img {
-  max-width: 100%;
-  height: 20vh;
-  align-self: center;
+header#header img.avatar {
+  display: block;
+  width: calc(100% / 2);
+  max-width: 215px;
+  height: calc(100% / 2);
+  max-height: 215px;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .content {
   max-width: 100%;
-  padding: 2em;
+  padding: 4vw;
   margin: 0 auto;
+}
+
+section {
+  padding: 1em;
+  border-radius: 1em;
+  margin-bottom: 4em;
+  background-color: #f5f5f5;
+}
+section p {
+  padding: 1em;
 }
 
 .dark-red {
   background-color: #a70000;
+}
+
+.introduction h3 {
+  font-size: 2em;
+  color: #a70000;
+  margin: 2em 0;
 }
 
 h2 {
@@ -8147,14 +8170,28 @@ h2 {
 
 h2 + p {
   text-align: left;
-  margin-bottom: 5em;
 }
 
-@media only screen and (min-width: 992px) {
+#form {
+  padding: 8vw;
+  border-radius: 1em;
+}
+
+@media only screen and (min-width: 993px) {
   .content {
     max-width: 80%;
-    padding: 1rem;
+    padding: 2rem;
     margin: 0 auto;
+    border-radius: 1em;
+  }
+
+  nav .brand-logo {
+    font-size: 2.1rem;
+  }
+
+  #portfolio {
+    padding: 2em;
+    border-radius: 1em;
   }
 }
 body {
@@ -8162,14 +8199,20 @@ body {
   top: -3rem;
 }
 
+nav ul a:hover {
+  background-color: #ffab40;
+  color: rgba(0, 0, 0, 0.87);
+}
+
 p {
   font-size: 1.15em;
 }
 
-#header {
+header#header {
+  /*(
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
 }
 
 .input-field > label {
