--- a/sass/custom/_page.scss
+++ b/sass/custom/_page.scss
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 body {
     background-color: hsl(0, 50%, 100%);
+}
+
+
+nav .brand-logo {
+    font-size: 1rem;
 }
 
 nav h1 {
@@ -8,29 +15,48 @@ nav h1 {
     top: 1em;
 }
 
-#header {
+header#header {
 	color: #fff;
-	background: grey url("https://images2.imgbox.com/c6/93/WBMZz479_o.jpg") no-repeat fixed center center / cover;
-	min-height: 40vh;
+    background: grey url("https://images2.imgbox.com/c6/93/WBMZz479_o.jpg") no-repeat fixed center center / cover;
+	min-height: $header-height;
 	text-shadow: 1px 1px 2px #000;
     padding: 2em;
     margin-bottom: 4em;
-	img {
-		max-width: 100%;
-		height: 20vh;
-		align-self: center;
-		padding: 0;
-		margin: 0;
+    img.avatar {
+        display: block;
+        width: calc(100% / 2);
+        max-width: 215px;
+        height: calc(100% / 2);
+        max-height: 215px;
+        padding: 0;
+        margin: 0 auto;
 	}
 }
 .content {
 	max-width: 100%;
-	padding: 2em;
-	margin: 0 auto;
+	padding: 4vw;
+    margin: 0 auto;
+}
+
+section {
+    padding: 1em;
+    border-radius: 1em;
+    margin-bottom: 4em;
+    background-color: #f5f5f5;
+
+    p {
+        padding: 1em;
+    }
 }
 
 .dark-red {
     background-color: $custom-color-red;
+}
+
+.introduction h3 {
+    font-size: 2em;
+    color: $custom-color-red;
+    margin: 2em 0;
 }
 
 h2 {
@@ -53,13 +79,30 @@ h2 {
 
 h2 + p {
     text-align: left;
-    margin-bottom: 5em;
 }
 
-@media only screen and (min-width: 992px) {
+#form {
+    padding: 8vw;
+    border-radius: 1em;
+}
+
+@media only screen and (min-width: $medium-screen-up) {
 	.content {
 		max-width: 80%;
-		padding: 1rem;
-		margin: 0 auto;
-	}
+		padding: 2rem;
+        margin: 0 auto;
+        border-radius: 1em;
+    }
+
+    nav .brand-logo {
+        font-size: 2.1rem;
+    }
+
+    #portfolio {
+        padding: 2em;
+        border-radius: 1em;
+    } 
 }
+
+
+
