--- a/sass/materialize/components/_variables.scss
+++ b/sass/materialize/components/_variables.scss
@@ -47,6 +47,8 @@ $link-color: $primary-color;
 $custom-color-red: rgb(167, 0, 0);
 $custom-color-red-dark: rgb(124, 3, 3);
 
+$custom-grey: #dedede;
+
 // 2. Badges
 // ==========================================================================
 
@@ -307,7 +309,7 @@ $toast-action-color: #eeff41;
 // 20. Typography
 // ==========================================================================
 
-$font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
+$font-stack: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
 $off-black: rgba(0, 0, 0, 0.87) !default;
 // Header Styles
 $h1-fontsize: 4.2rem !default;
@@ -351,3 +353,6 @@ $collection-line-height: 1.5rem !default;
 // ==========================================================================
 
 $progress-bar-color: $secondary-color !default;
+
+//=============================
+$header-height: 40vh;
